fixed weird overflow issue

--- a/public/stylesheets/chitter4.css
+++ b/public/stylesheets/chitter4.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Cormorant+Garamond:wght@300&family=Dongle:wght@300;400;700&family=IBM+Plex+Serif:wght@100;300&family=Julius+Sans+One&family=Prata&family=Russo+One&family=Varela+Round&display=swap');
 
+/* general */
+
 body {
   display: flex;
   flex-direction: row;
@@ -13,30 +15,14 @@ body {
   background-size: cover;
 }
 
-.post-body {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-  margin: auto;
-  justify-content: center;
-  background-image: url(/images/forest.jpg);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .main-column {
   display: flex;
   flex-direction: row;
-  /* margin: auto; */
   background-color: white;
   justify-content: flex-end;
   min-width: 1000px;
   max-width: 1300px;
-  /* overflow-x: scroll; */
 }
-
-
 
 html {
   overflow: hidden;
@@ -60,9 +46,6 @@ html {
   margin: 0 auto;
   text-align: center;
   border-left: 1px lightgrey solid;
-  /* /* width: 30%; */
-  /* padding-top: 5px; */
-  /* padding-right: 5px; */
   padding-bottom: 5px;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -81,109 +64,7 @@ html {
   margin: 0 auto;
   text-align: center;
   border-left: 1px lightgrey solid;
-  /* width: 30%;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px; */
 }
-
-.bi-column-one-post {
-  /* background-image: url(/images/forest.jpg); */
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 40%;
-  background-color: white;
-  /* margin: 0 auto; */
-  text-align: center;
-  border-left: 1px lightgrey solid;
-  /* /* width: 30%; */
-  /* padding-top: 5px; */
-  /* padding-right: 5px; */
-  padding-bottom: 5px;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position-x: 50%; 
-  background-position-y: 60%;
-  background-size: cover;
-  overflow-x: scroll;
-}
-
-.bi-column-two-post {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 30%;
-  height: 100%;
-  background-color: white;
-  /* margin: 0 auto; */
-  text-align: center;
-  border-left: 1px lightgrey solid;
-  /* width: 30%;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px; */
-}
-.signup-login-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50%;
-  height: 100vh;
-  /* border-top: 1px lightgrey solid; */
-  /* background-color: green; */
-}
-
-.post-chit-main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-  justify-content: flex-start;
-  /* border-top: 1px lightgrey solid; */
-  /* background-color: green; */
-}
-
-.signup-box {
-  display: flex;
-  flex-direction: column;
-  /* border-bottom: 1px lightgrey solid; */
-}
-
-.post-chit-box {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  /* border-bottom: 1px lightgrey solid; */
-}
-
-.input-box {
-  /* background-color: grey; */
-  /* height: 100px; */
-  width: 100%;
-}
-
-.login-box {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px lightgrey solid;
-}
-
-.signup-heading {
-  margin-bottom: 20px;
-  margin-top: 30px;
-}
-
-/* .tri-column-three {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-  height: 100%;
-  background-color: white;
-} */
 
 form {
   margin: 0 auto;
@@ -193,7 +74,7 @@ form {
 }
 
 input {
-  width: 200px;
+  width: 30%;
   margin: 10 auto;
   margin-bottom: 30px;
   border-radius: 9999px;
@@ -247,6 +128,36 @@ button {
   padding: 5px 10px;
 }
 
+/* sign-up/login */
+
+.signup-heading {
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.signup-login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  height: 100vh;
+}
+
+.signup-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-box {
+  width: 100%;
+}
+
+.login-box {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px lightgrey solid;
+}
+
 textarea {
   padding: 20px;
   resize: none;
@@ -256,6 +167,95 @@ textarea {
 }
 
 /* post_chit.erb */
+
+.post-body {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  margin: auto;
+  justify-content: center;
+  background-image: url(/images/forest.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.post-chit-main-container {
+  /* redundant? */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-start;
+}
+
+.post-chit-box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.bi-column-one-post {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 40%;
+  background-color: white;
+  text-align: center;
+  border-left: 1px lightgrey solid;
+  /* padding-bottom: 5px; */
+  /* background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position-x: 50%; 
+  background-position-y: 60%; */
+  /* background-size: cover; */
+  overflow-x: scroll;
+}
+
+.bi-column-two-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 28%;
+  height: 100%;
+  background-color: white;
+  text-align: center;
+  border-left: 1px lightgrey solid;
+  /* padding: 10px; */
+  
+}
+
+.inner-column-three-posts {
+  display: flex; 
+  flex-direction: column;
+  justify-content: space-around;
+  width: 28%;
+  height: 100%;
+  background-color: white;
+  border-left: 1px lightgrey solid;
+  /* margin: auto; */
+  /* padding: 10px; */
+}
+
+/* .links {
+  background-color: green;
+
+} */
+
+/* chits */
+
+.chit-container {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px lightgrey solid;
+  padding: 5px;
+}
+
+.chit-container:hover {
+  background-color: rgba(220, 220, 220, 0.1);
+}
 
 .handle {
   font-family: arial;
@@ -273,29 +273,14 @@ textarea {
   text-align: right;
 }
 
-.chit-container {
-  display: flex;
-  flex-direction: column;
-  border-top: 1px lightgrey solid;
-  /* border-bottom: 1px lightgrey solid; */
-  padding: 5px;
-}
-
-.chit-container:hover {
-  background-color: rgba(220, 220, 220, 0.1);
-}
-
 .post-form {
   margin: 0 auto;
   text-align: center;
   padding-top: 0px;
-  /* padding-bottom: 0px; */
   width: 100%;
 }
 
 .post-input {
-  /* background-color: grey; */
-  /* height: 100px; */
   width: 100%;
   height: 200px;
   border-radius: 0px;
@@ -307,7 +292,7 @@ textarea {
 }
 
 .handle-input {
-  width: 200px;
+  width: 40%;
   margin: 10 auto;
   margin-bottom: 30px;
   border-radius: 9999px;
@@ -324,6 +309,57 @@ textarea {
   padding: 20px;
   background-color: lightgray;
 }
+
+.what-is-happening {
+  display: flex;
+  flex-direction: column;
+  min-height: 30%;
+  max-height: 30%;
+  width: 100%;
+  background-color: rgba(196, 192, 192, 0.8);
+  border-radius: 15px;
+}
+
+.what-is-happening-header {
+  display: flex;
+  flex-direction: column;
+  /* min-height: 15%;
+  max-height: 15%; */
+  height: 30px;
+  padding: 10px;
+  max-width: 100%;
+  background-color: rgba(196, 192, 192, 0.8);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  font-family: arial;
+  text-align: left;
+}
+
+.people-you-know {
+  display: flex;
+  flex-direction: column;
+  min-height: 40%;
+  max-height: 40%;
+  width: 100%;
+  background-color: rgba(196, 192, 192, 0.8);
+  border-radius: 15px;
+}
+
+.people-you-know-header {
+  display: flex;
+  flex-direction: column;
+  height: 30px;
+  /* min-height: 15%;
+  max-height: 15%; */
+  padding: 10px;
+  max-width: 100%;
+  background-color: rgba(196, 192, 192, 0.8);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  font-family: arial;
+  text-align: left;
+}
+
 
 
 
